# tasks

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
my_project/: README.md
my_project/src/: masks.py  processing.py  widget.py
my_project/tests/: tests_masks.py
src/: __init__.py  generators.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
