[project]
name = "pythonproject-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Kryztom",email = "kryztom@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 119
known_first_party = ["my_project"] # Замените на имя вашего пакета

[tool.mypy]
warn_no_return = true
disallow_untyped_defs = true
mypy_path = "src, tests" # Добавьте пути к вашим исходникам и тестам
exclude = '''(/.venv)'''

[pytest]
pythonpath = [".", "src"]